# wrp_ros_interface

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: blank.yml
include/wrp_ros_interface/: wrp_ros_interface_node.hpp
src/: wrp_ros_interface_node.cpp
